--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "apollo-server-express": "^5.3.0",
     "@apollo/server": "^5.3.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^5.22.0",
     "express": "^5.2.1",
+    "express4": "^0.0.1",
     "graphql": "^16.12.0",
     "uuid": "^13.0.0"
   },
